--- a/layouts/works/single.html
+++ b/layouts/works/single.html
@@ -12,7 +12,7 @@
         </h2>
 
         <div class="prose dark:prose-light mb-8">
-            {{ readFile (print "/content/works/" .Site.Data.realworld.description ".md") | markdownify }}
+            {{ readFile (print "_data/realworld/" .Site.Data.realworld.description ".md") | markdownify }}
         </div>
 
         <div class="grid md:grid-cols-2 gap-4">
@@ -22,7 +22,7 @@
                     {{ .title }}
                 </h3>
                 <div class="prose dark:prose-light">
-                    {{ readFile (print "/content/works/" .type ".md") | markdownify }}
+                    {{ readFile (print "_data/realworld/" .type ".md") | markdownify }}
                 </div>
                 <div class="flex justify-center gap-4 mt-4">
                     <a class="px-4 py-2 !text-neutral !no-underline !rounded-md bg-primary-600 hover:!bg-primary-500 dark:bg-primary-800 dark:hover:!bg-primary-700"
