--- a/layouts/works/single.html
+++ b/layouts/works/single.html
@@ -19,9 +19,11 @@
             {{ range $.Site.Data.works.realworld }}
             <div class="flex flex-col gap-4 rounded border-2 border-primary-500 p-4 h-full">
                 <div class="text-center">
-                    <h3 class="pb-1 font-bold border-b-2 border-primary-500 inline-block">
-                        {{ .title }}
-                    </h3>
+                    <a href="https://github.com/{{ .repo }}" target="_blank">
+                        <h3 class="pb-1 font-bold border-b-2 border-primary-500 inline-block">
+                            {{ .title }}
+                        </h3>
+                    </a>
                 </div>
                 <div class="prose dark:prose-light flex-grow">
                     {{ readFile (print "_data/realworld/" .type ".md") | markdownify }}
