--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -40,26 +40,6 @@
   position: static
 }
 
-.absolute {
-  position: absolute
-}
-
-.relative {
-  position: relative
-}
-
-.top-0 {
-  top: 0px
-}
-
-.right-0 {
-  right: 0px
-}
-
-.m-8 {
-  margin: 2rem
-}
-
 .mt-0 {
   margin-top: 0px
 }
@@ -70,10 +50,6 @@
 
 .mb-8 {
   margin-bottom: 2rem
-}
-
-.mt-8 {
-  margin-top: 2rem
 }
 
 .inline-block {
@@ -98,6 +74,10 @@
 
 .flex-col {
   flex-direction: column
+}
+
+.justify-end {
+  justify-content: flex-end
 }
 
 .justify-center {
@@ -172,11 +152,6 @@
   line-height: 1.75rem
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem
-}
-
 .font-extrabold {
   font-weight: 800
 }
@@ -212,12 +187,6 @@
 
 .dark .dark\:hover\:\!bg-primary-700:hover {
   background-color: var(--color-primary-700) !important
-}
-
-@media (min-width: 640px) {
-  .sm\:flex-row {
-    flex-direction: row
-  }
 }
 
 @media (min-width: 768px) {
