--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -189,6 +189,12 @@
   background-color: var(--color-primary-700) !important
 }
 
+@media (min-width: 640px) {
+  .sm\:flex-row {
+    flex-direction: row
+  }
+}
+
 @media (min-width: 768px) {
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr))
