--- a/layouts/works/single.html
+++ b/layouts/works/single.html
@@ -8,22 +8,22 @@
     {{ .Content | emojify }}
     {{ range $.Site.Data.works }}
     <section class="mb-8">
-        <h2 class="text-xl mb-8 pb-2 border-b-8 border-primary-500 inline-block">
+        <h2 class="text-xl mb-8 pb-2 border-b-8 border-purple-500 inline-block">
             {{ .title }}
         </h2>
 
         {{ if .description }}
-        <div class="prose dark:prose-light mb-8">
+        <div class="prose dark:prose-invert mb-8">
             {{ readFile "_data/works/realworld.md" | markdownify }}
         </div>
         {{ end }}
 
         <div class="grid md:grid-cols-2 gap-4">
             {{ range .projects }}
-            <div class="flex flex-col gap-4 rounded border-2 border-primary-500 p-4">
+            <div class="flex flex-col gap-4 rounded border-2 border-purple-500 p-4">
                 <div class="text-center">
                     <a href="https://github.com/{{ .repo }}" target="_blank">
-                        <h3 class="pb-1 font-bold border-b-2 border-primary-500 inline-block">
+                        <h3 class="pb-1 font-bold border-b-2 border-purple-500 inline-block">
                             {{ .title }}
                         </h3>
                     </a>
@@ -33,7 +33,7 @@
                     {{ partial "badge.html" (print "Date : " .date) }}
                 </div>
                 {{ end }}
-                <div class="prose dark:prose-light flex-grow">
+                <div class="prose dark:prose-invert flex-grow">
                     {{ readFile (print "_data/works/" .name ".md") | markdownify }}
                 </div>
                 <div class="flex justify-center gap-4">
