--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -140,3 +140,9 @@
     grid-template-columns: repeat(2, minmax(0, 1fr))
   }
 }
+
+@media (min-width: 1024px) {
+  .lg\:flex-row {
+    flex-direction: row
+  }
+}
