--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -14,6 +14,18 @@
   margin-bottom: 2rem
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem
+}
+
+.mt-1 {
+  margin-top: 0.25rem
+}
+
 .inline-block {
   display: inline-block
 }
@@ -30,12 +42,28 @@
   display: contents
 }
 
+.h-full {
+  height: 100%
+}
+
+.h-36 {
+  height: 9rem
+}
+
+.w-36 {
+  width: 9rem
+}
+
 .flex-grow {
   flex-grow: 1
 }
 
 .flex-col {
   flex-direction: column
+}
+
+.items-center {
+  align-items: center
 }
 
 .justify-end {
@@ -56,6 +84,10 @@
 
 .\!rounded-md {
   border-radius: 0.375rem !important
+}
+
+.rounded-full {
+  border-radius: 9999px
 }
 
 .border-2 {
@@ -111,6 +143,11 @@
   line-height: 1.75rem
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem
+}
+
 .font-extrabold {
   font-weight: 800
 }
@@ -124,9 +161,21 @@
   color: rgb(23 23 23 / var(--tw-text-opacity))
 }
 
+.text-neutral-500 {
+  --tw-text-opacity: 1;
+  color: rgb(115 115 115 / var(--tw-text-opacity))
+}
+
 .\!no-underline {
   -webkit-text-decoration-line: none !important;
           text-decoration-line: none !important
+}
+
+@media (prefers-color-scheme: dark) {
+  .dark\:text-neutral-400 {
+    --tw-text-opacity: 1;
+    color: rgb(163 163 163 / var(--tw-text-opacity))
+  }
 }
 
 @media (min-width: 640px) {
