--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,6 +2,10 @@
   position: static
 }
 
+.fixed {
+  position: fixed
+}
+
 .-mt-4 {
   margin-top: -1rem
 }
@@ -24,6 +28,10 @@
 
 .mt-1 {
   margin-top: 0.25rem
+}
+
+.mt-4 {
+  margin-top: 1rem
 }
 
 .block {
