--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -34,6 +34,10 @@
   margin-top: 1rem
 }
 
+.mb-4 {
+  margin-bottom: 1rem
+}
+
 .block {
   display: block
 }
@@ -116,6 +120,16 @@
   border-radius: 9999px
 }
 
+.rounded-t-md {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem
+}
+
+.rounded-b-md {
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem
+}
+
 .border-2 {
   border-width: 2px
 }
@@ -145,6 +159,14 @@
   padding: 1rem
 }
 
+.p-2 {
+  padding: 0.5rem
+}
+
+.p-3 {
+  padding: 0.75rem
+}
+
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem
@@ -158,6 +180,21 @@
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem
+}
+
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px
 }
 
 .pb-2 {
