--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,12 +2,8 @@
   position: static
 }
 
-.fixed {
-  position: fixed
-}
-
-.-mt-4 {
-  margin-top: -1rem
+.mb-4 {
+  margin-bottom: 1rem
 }
 
 .mt-0 {
@@ -28,14 +24,6 @@
 
 .mt-1 {
   margin-top: 0.25rem
-}
-
-.mt-4 {
-  margin-top: 1rem
-}
-
-.mb-4 {
-  margin-bottom: 1rem
 }
 
 .block {
@@ -159,14 +147,6 @@
   padding: 1rem
 }
 
-.p-2 {
-  padding: 0.5rem
-}
-
-.p-3 {
-  padding: 0.75rem
-}
-
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem
@@ -182,19 +162,9 @@
   padding-right: 1rem
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px
 }
 
 .pb-2 {
@@ -292,6 +262,10 @@
 }
 
 @media (min-width: 1024px) {
+  .lg\:hidden {
+    display: none
+  }
+
   .lg\:flex-row {
     flex-direction: row
   }
