--- a/layouts/partials/extend-footer.html
+++ b/layouts/partials/extend-footer.html
@@ -1,1 +1,9 @@
 <script src="//unpkg.com/alpinejs" defer></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/luminous-lightbox/2.4.0/luminous.min.js"
+    integrity="sha512-QzKjuc+7pitZqj28ecclxJ2XJD9l91dNb25Er0ixaqYzpMqhKGIPohYN6blR9UfSR5ETL7wncxmEvVarrVwkSw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script>
+    new LuminousGallery(document.querySelectorAll("a"));
+</script>
