set lightbox everywhere

--- a/layouts/partials/extend-footer.html
+++ b/layouts/partials/extend-footer.html
@@ -5,5 +5,5 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script>
-    new LuminousGallery(document.querySelectorAll("a"));
+    new LuminousGallery(document.querySelectorAll("figure > a"));
 </script>
