--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,6 +2,26 @@
   position: static
 }
 
+.absolute {
+  position: absolute
+}
+
+.relative {
+  position: relative
+}
+
+.bottom-0 {
+  bottom: 0px
+}
+
+.right-0 {
+  right: 0px
+}
+
+.z-10 {
+  z-index: 10
+}
+
 .mb-4 {
   margin-bottom: 1rem
 }
@@ -24,6 +44,18 @@
 
 .mt-1 {
   margin-top: 0.25rem
+}
+
+.-mb-4 {
+  margin-bottom: -1rem
+}
+
+.-mb-40 {
+  margin-bottom: -10rem
+}
+
+.-mb-6 {
+  margin-bottom: -1.5rem
 }
 
 .block {
@@ -108,6 +140,10 @@
   border-radius: 9999px
 }
 
+.rounded-sm {
+  border-radius: 0.125rem
+}
+
 .rounded-t-md {
   border-top-left-radius: 0.375rem;
   border-top-right-radius: 0.375rem
@@ -116,6 +152,14 @@
 .rounded-b-md {
   border-bottom-right-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem
+}
+
+.rounded-tr-none {
+  border-top-right-radius: 0px
+}
+
+.rounded-bl-none {
+  border-bottom-left-radius: 0px
 }
 
 .border-2 {
@@ -189,12 +233,35 @@
   background-color: rgb(30 58 138 / 0.2)
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity))
+}
+
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity))
+}
+
+.bg-purple-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity))
+}
+
 .p-1 {
   padding: 0.25rem
 }
 
 .p-4 {
   padding: 1rem
+}
+
+.p-3 {
+  padding: 0.75rem
+}
+
+.p-2 {
+  padding: 0.5rem
 }
 
 .px-4 {
@@ -215,6 +282,16 @@
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem
 }
 
 .pb-2 {
@@ -255,6 +332,10 @@
 
 .font-bold {
   font-weight: 700
+}
+
+.italic {
+  font-style: italic
 }
 
 .text-neutral-900 {
@@ -317,6 +398,14 @@
   outline-offset: 2px
 }
 
+[dir="ltr"] .ltr\:pr-3 {
+  padding-right: 0.75rem
+}
+
+[dir="rtl"] .rtl\:pl-3 {
+  padding-left: 0.75rem
+}
+
 .dark .dark\:border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity))
@@ -355,6 +444,11 @@
 .dark .dark\:text-neutral-400 {
   --tw-text-opacity: 1;
   color: rgb(163 163 163 / var(--tw-text-opacity))
+}
+
+.dark .dark\:text-neutral-300 {
+  --tw-text-opacity: 1;
+  color: rgb(212 212 212 / var(--tw-text-opacity))
 }
 
 .dark .dark\:hover\:\!bg-green-700:hover {
