add vue ts front work

--- a/layouts/works/single.html
+++ b/layouts/works/single.html
@@ -18,36 +18,45 @@
         </div>
         {{ end }}
 
-        <div class="grid md:grid-cols-2 gap-4">
+        <div>
             {{ range .projects }}
-            {{ $borders := dict "green" "border-green-500" "orange" "border-orange-500" "black" "border-black dark:border-white"
-"red" "border-red-500" "teal" "border-teal-500" "primary" "border-purple-500" }}
-            <div class="flex flex-col gap-4 rounded border-2 p-4 {{ (index $borders (or .color "primary")) }}">
-                <div class="text-center">
-                    <a href="https://github.com/{{ .repo }}" target="_blank">
-                        <h3 class="pb-1 font-bold border-b-2 border-purple-500 inline-block">
-                            {{ .title }}
-                        </h3>
-                    </a>
-                </div>
-                {{ if .date }}
-                <div class="flex justify-end">
-                    {{ partial "badge.html" (print "Date : " .date) }}
+            {{ if .title }}
+            <h3 class="pb-1 font-bold border-b-2 border-purple-500 inline-block mb-4">
+                {{ .title }}
+            </h3>
+            {{ end }}
+            <div class="grid md:grid-cols-2 gap-4 mb-4">
+                {{ range .apps }}
+                {{ $borders := dict "green" "border-green-500" "orange" "border-orange-500" "black" "border-black dark:border-white"
+    "red" "border-red-500" "teal" "border-teal-500" "primary" "border-purple-500" }}
+                <div class="flex flex-col gap-4 rounded border-2 p-4 {{ (index $borders (or .color "primary")) }}">
+                    <div class="text-center">
+                        <a href="https://github.com/{{ .repo }}" target="_blank">
+                            <h4 class="pb-1 font-bold border-b-2 border-purple-500 inline-block">
+                                {{ .title }}
+                            </h4>
+                        </a>
+                    </div>
+                    {{ if .date }}
+                    <div class="flex justify-end">
+                        {{ partial "badge.html" (print "Date : " .date) }}
+                    </div>
+                    {{ end }}
+                    <div class="prose dark:prose-invert flex-grow">
+                        {{ readFile (print "_data/works/" .name ".md") | markdownify }}
+                    </div>
+                    <div class="flex justify-center gap-4">
+                        {{ partial "button.html" (dict "text" (partial "icon.html" "github") "href" (print
+                        "https://github.com/" .repo) "color" .color) }}
+                        {{ if .demo }}
+                        {{ partial "button.html" (dict "text" "Demo" "href" .demo "color" .color) }}
+                        {{ end }}
+                        {{ if .docs }}
+                        {{ partial "button.html" (dict "text" "Docs" "href" .docs "color" .color) }}
+                        {{ end }}
+                    </div>
                 </div>
                 {{ end }}
-                <div class="prose dark:prose-invert flex-grow">
-                    {{ readFile (print "_data/works/" .name ".md") | markdownify }}
-                </div>
-                <div class="flex justify-center gap-4">
-                    {{ partial "button.html" (dict "text" (partial "icon.html" "github") "href" (print
-                    "https://github.com/" .repo) "color" .color) }}
-                    {{ if .demo }}
-                    {{ partial "button.html" (dict "text" "Demo" "href" .demo "color" .color) }}
-                    {{ end }}
-                    {{ if .docs }}
-                    {{ partial "button.html" (dict "text" "Docs" "href" .docs "color" .color) }}
-                    {{ end }}
-                </div>
             </div>
             {{ end }}
         </div>
