--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,6 +22,10 @@
   z-index: 10
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem
+}
+
 .mb-4 {
   margin-bottom: 1rem
 }
@@ -54,6 +58,10 @@
   display: inline-block
 }
 
+.inline {
+  display: inline
+}
+
 .flex {
   display: flex
 }
@@ -66,12 +74,24 @@
   display: contents
 }
 
+.hidden {
+  display: none
+}
+
+.h-12 {
+  height: 3rem
+}
+
 .h-full {
   height: 100%
 }
 
 .h-36 {
   height: 9rem
+}
+
+.w-12 {
+  width: 3rem
 }
 
 .w-full {
@@ -84,6 +104,14 @@
 
 .flex-grow {
   flex-grow: 1
+}
+
+.cursor-pointer {
+  cursor: pointer
+}
+
+.list-none {
+  list-style-type: none
 }
 
 .flex-col {
@@ -100,6 +128,10 @@
 
 .justify-center {
   justify-content: center
+}
+
+.justify-between {
+  justify-content: space-between
 }
 
 .gap-4 {
@@ -235,6 +267,11 @@
   padding-bottom: 0.5rem
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem
@@ -243,6 +280,10 @@
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem
+}
+
+.pb-4 {
+  padding-bottom: 1rem
 }
 
 .pb-2 {
@@ -255,6 +296,11 @@
 
 .text-center {
   text-align: center
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem
 }
 
 .text-sm {
@@ -277,6 +323,10 @@
   line-height: 2rem
 }
 
+.font-medium {
+  font-weight: 500
+}
+
 .font-extrabold {
   font-weight: 800
 }
@@ -289,14 +339,19 @@
   font-style: italic
 }
 
-.text-neutral-900 {
-  --tw-text-opacity: 1;
-  color: rgb(23 23 23 / var(--tw-text-opacity))
-}
-
 .text-neutral-500 {
   --tw-text-opacity: 1;
   color: rgb(115 115 115 / var(--tw-text-opacity))
+}
+
+.text-neutral-700 {
+  --tw-text-opacity: 1;
+  color: rgb(64 64 64 / var(--tw-text-opacity))
+}
+
+.text-neutral-900 {
+  --tw-text-opacity: 1;
+  color: rgb(23 23 23 / var(--tw-text-opacity))
 }
 
 .\!no-underline {
@@ -344,9 +399,46 @@
   color: rgb(255 255 255 / var(--tw-text-opacity))
 }
 
+.hover\:underline:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline
+}
+
+.hover\:decoration-2:hover {
+  text-decoration-thickness: 2px
+}
+
+.hover\:underline-offset-2:hover {
+  text-underline-offset: 2px
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px
+}
+
+[dir="ltr"] .ltr\:mr-14 {
+  margin-right: 3.5rem
+}
+
+[dir="ltr"] .ltr\:text-right {
+  text-align: right
+}
+
+[dir="rtl"] .rtl\:ml-14 {
+  margin-left: 3.5rem
+}
+
+[dir="rtl"] .rtl\:text-left {
+  text-align: left
+}
+
+.dark .dark\:inline {
+  display: inline
+}
+
+.dark .dark\:hidden {
+  display: none
 }
 
 .dark .dark\:border-white {
@@ -414,9 +506,39 @@
   background-color: rgb(15 118 110 / var(--tw-bg-opacity)) !important
 }
 
+@media print {
+  .print\:hidden {
+    display: none
+  }
+}
+
 @media (min-width: 640px) {
+  .sm\:mb-0 {
+    margin-bottom: 0px
+  }
+
+  .sm\:block {
+    display: block
+  }
+
   .sm\:flex-row {
     flex-direction: row
+  }
+
+  [dir="ltr"] .ltr\:sm\:mr-7 {
+    margin-right: 1.75rem
+  }
+
+  [dir="ltr"] .ltr\:sm\:last\:mr-0:last-child {
+    margin-right: 0px
+  }
+
+  [dir="rtl"] .rtl\:sm\:ml-7 {
+    margin-left: 1.75rem
+  }
+
+  [dir="rtl"] .rtl\:sm\:last\:ml-0:last-child {
+    margin-left: 0px
   }
 }
 
