--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -20,6 +20,8 @@
     {{ end }}
     <div class="flex justify-between items-center">
       <div class="flex items-center gap-4">
+        <img src="/kube.png" width="30" height="30" alt="Kubernetes" title="Run on bare metal Kubernetes on Hetzner Cloud" />
+
         {{/* Copyright */}}
         <p class="hidden sm:block text-sm text-neutral-500 dark:text-neutral-400">
           {{- with .Site.Params.copyright }}
@@ -32,7 +34,7 @@
         </p>
 
         <a href="https://yesterweb.org/no-to-web3/">
-            <img src="https://auzziejay.com/images/noweb32.gif" />
+            <img src="https://auzziejay.com/images/noweb32.gif" alt="No to Web3" />
         </a>
       </div>
       {{/* Appearance switch */}}
