--- a/layouts/works/single.html
+++ b/layouts/works/single.html
@@ -31,7 +31,7 @@
     "red" "border-red-500" "teal" "border-teal-500" "primary" "border-purple-500" }}
                 <div class="flex flex-col gap-4 rounded border-2 p-4 {{ (index $borders (or .color "primary")) }}">
                     <div class="text-center">
-                        <a href="https://github.com/{{ .repo }}" target="_blank">
+                        <a href="{{ .demo }}" target="_blank">
                             <h4 class="pb-1 font-bold border-b-2 border-purple-500 inline-block">
                                 {{ .title }}
                             </h4>
@@ -48,6 +48,10 @@
                     <div class="flex justify-center gap-4">
                         {{ partial "button.html" (dict "text" (partial "icon.html" "github") "href" (print
                         "https://github.com/" .repo) "color" .color) }}
+                        {{ if .ci }}
+                        {{ partial "button.html" (dict "text" (partial "icon.html" "bug") "href" (print
+                        "https://concourse.okami101.io/teams/main/pipelines/" .ci) "color" .color) }}
+                        {{ end }}
                         {{ if .demo }}
                         {{ partial "button.html" (dict "text" "Demo" "href" .demo "color" .color) }}
                         {{ end }}
