--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -12,6 +12,7 @@
         var u = "//matomo.okami101.io/";
         _paq.push(['setTrackerUrl', u + 'matomo.php']);
         _paq.push(['setSiteId', '1']);
+        _paq.push(['requireCookieConsent']);
         var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
         g.async = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
     })();
