--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -3385,6 +3385,10 @@ body:has(#menu-controller:checked) {
 }
 
 @media (min-width: 768px) {
+  .md\:block {
+    display: block;
+  }
+
   .md\:w-1\/3 {
     width: 33.333333%;
   }
