--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -2,19 +2,5 @@
     integrity="sha512-koV7rZjdkgQouiHiyzaGG1FblTuAkJVypXhzDxDNC74SdnKlGjJCkFwVcGP/wx5bwplcpnOcCy2ZJAGaVB5qmw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<!-- Matomo -->
-<script>
-    var _paq = window._paq = window._paq || [];
-    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-    _paq.push(['trackPageView']);
-    _paq.push(['enableLinkTracking']);
-    (function () {
-        var u = "//matomo.okami101.io/";
-        _paq.push(['setTrackerUrl', u + 'matomo.php']);
-        _paq.push(['setSiteId', '1']);
-        _paq.push(['requireCookieConsent']);
-        var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
-        g.async = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
-    })();
-</script>
-<!-- End Matomo Code -->
+<script async defer data-website-id="2648f1a5-ad58-4475-aa29-6cc364fb1bfa"
+    src="https://umami.okami101.io/umami.js"></script>
